syntax ="proto3";
option java_package="org.sid.ImmatriculationService.grpc.stub";
message Vehicule{
  int32 Id=1;
   string nom=2;
   string matricule=3;
  string marque =4;
  int32 puissFiscal=5;
  string modele=6;
  Proprietaire Proprietaire=7;
}
message VehiculeId{
      int32 id=1;
}
message Proprietaire{
  int32 Id=1;
   string nom=2;
  string datecreat=3;
  string email=4;
}
message Proprietaireid{
  int32 Id=1;
}
    message GetVehiculeListReuest{}
   message GetProprietaireListReuest{}

    message VehiculeListResponse{
    repeated Vehicule vehicule=1;
    }
    message ProprietaireListResponse{
  repeated Proprietaire proprietaire=1;
    }
    message VehiculeResponseDTO{
      int32 Id=1;
      string nom=2;
      string marque =3;
      int32 puissFiscal=4;
      string modele=5;
      Proprietaire Proprietaire=6;
    }
service VehiculeService{
  rpc getVehiculeById( VehiculeId ) returns (Vehicule);
  rpc  getVehiculeList (GetVehiculeListReuest) returns (VehiculeListResponse);
}
service ProprietaireService{
  rpc getProprietaireById( Proprietaireid ) returns (Proprietaire);
  rpc  getProprietaireList (GetProprietaireListReuest) returns (ProprietaireListResponse);
}
